Ajout du contexte support sur le backend (#11)
* chore(back): :construction: init support context

* ci(back): mise a jour des workflow pour le support

* refactor(back): déplacement de Country dans shared

* refactor(back): déplacement de valueobject Email vers shared

* refactor(back-support): :construction: Ajout des repository avec migrations et entités

* refactor(back-support): seed initial de données

* feat(back-support): ajout des DTO et du contrôleur pour les informations de l'entreprise

* docs(back-support): ajout d'un fichier d'une collection Bruno

* refactor(back-support): suppression de la table faqs dans le script de migration

* chore(back-support): ajout de la configuration Flyway pour clean la BDD en mode dev

* feat(back-support): ajout du endpoint faqs

* feat(back-support): ajout du endpoint issues (partiel)

* refactor(back-support): renommer les gestionnaires de cas d'utilisation pour une meilleure cohérence

* refactor(back-user): renommer les gestionnaires de cas d'utilisation pour une meilleure cohérence

* refactor(back-support): mettre à jour des messages de journalisation

* feat(back-support): route pour lister les conversations

* fix(back-support): correction du faq presenter qui affiche mal les categories

* fix(back-user): retrait de l'usage de jaxrs

* fix(back): changer http code pour IllegalDomainStateException en 500

* refactor(back-user): simplification  et déplacement du seed des user dans un fichier Flyway

* feat(back): ajout des classes ACRISS

* refactor(back): ajout de l'utilsateur sur la route issues avec feign client et com inter services

* refactor(back-support): les issue renvoient maintenant les informations sur les reservations

* chore(back-user): mise a jour des stubs users pour avoir un created at

* refactor(back): suppression de l'import inutile de Objects dans UuidV7

* fix(back-user): le cookie pour le refresh token était prolongé

* fix(back): correction de la durée d'expiration du token à 120 secondes

